@startuml
hide circle
hide empty members
skinparam classAttributeIconSize 0

skinparam linetype polyline
skinparam linetype ortho

package storage {
    class CatalogueContentManager {
        - String directoryName
        - String inventoryFileName
        - String recipeBookFileName
        - Path basePath
        - Path inventoryFilePath
        - Path recipeBookFilePath
        + CatalogueContentManager()
        + Inventory loadInventory(): Inventory
        + <T extends Inventory> T loadConsumablesCatalogue(Path filePath, Supplier<T> catalogue)
        + RecipeBook loadRecipeBook(): RecipeBook
        + List<String> loadRawCatalogueContent(Path filePath)
        + void saveToFile(Catalogue catalogue)
        - void checkDirectoryExistence(): void
        - void checkFileExistence(Path filePath): void
        + void setBasePath(Path basePath): void
        + void setInventoryFilePath(Path inventoryFilePath): void
        + void setRecipeBookFilePath(Path recipeBookFilePath): void
        + Path getBasePath(): Path
        + Path getInventoryFilePath(): Path
        + Path getRecipeBookFilePath(): Path
    }

    class Inventory {

    }

    class RecipeBook {

    }

    class Ingredient {

    }

    class Recipe {

    }


    }

    class IngredientCatalogue {
    }

    CatalogueContentManager --> Inventory : loads
    CatalogueContentManager --> RecipeBook : loads
    Inventory --> Ingredient : contains
    RecipeBook --> Recipe : contains
    Recipe --> Ingredient : contains
    Inventory ---|> IngredientCatalogue
    RecipeBook --|> Catalogue
    Recipe --|> Catalogue
    IngredientCatalogue --|> Catalogue

    CatalogueContentManager --> "Parser" : Uses
}

@enduml
